@@ -84,6 +84,7 @@ public class OAuthAsyncCompletionHandlerTest {
 
         @Override
         public String convert(Response response) throws IOException {
+            response.close();
             return "All good";
         }
     }
@@ -92,6 +93,7 @@ public class OAuthAsyncCompletionHandlerTest {
 
         @Override
         public String convert(Response response) throws IOException {
+            response.close();
             throw new OAuthException("bad oauth");
         }
     }
